--- a/CURVET model.ipynb
+++ b/CURVET model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5ca8d5cb",
    "metadata": {
     "execution": {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d5b89b00",
    "metadata": {
     "execution": {
@@ -119,10 +119,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ea712196",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 39 images belonging to 3 classes.\n",
+      "Number of images in glioma = 19 \n",
+      "\n",
+      "Number of images in meningioma = 8 \n",
+      "\n",
+      "Number of images in pituitary tumor = 12 \n",
+      "\n",
+      "test_classes:  {'glioma': 0, 'meningioma': 1, 'pituitary tumor': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "test_datagen = ImageDataGenerator(rescale=1./255)\n",
     "img_height=224\n",
@@ -157,59 +172,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b365cef4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-04-30T12:23:01.382477Z",
-     "iopub.status.busy": "2023-04-30T12:23:01.381299Z",
-     "iopub.status.idle": "2023-04-30T12:23:01.393921Z",
-     "shell.execute_reply": "2023-04-30T12:23:01.392525Z",
-     "shell.execute_reply.started": "2023-04-30T12:23:01.382422Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class The_proccess():\n",
-    "\n",
-    "    \n",
-    "            \n",
-    "    def first(self):\n",
-    "        print(\"Transfer learning with a pretrained-imagenet\")\n",
-    "        Level=-1\n",
-    "        ImageNet_model(Dataset_path, G, index, Level, Process= 'pretrained-imagenet')\n",
-    "        \n",
-    "    def second(self):\n",
-    "        print(\"Training CURVET (WO/CLCD)\")\n",
-    "        Level=0\n",
-    "        CURVET (G, index, Level, Process='CURVET (WO_CLCD)')\n",
-    "\n",
-    "    def third(self):\n",
-    "        print(\"Training CURVET (WO/CL, W/CD)\")\n",
-    "        Level=0\n",
-    "        CURVET (G, index, Level, Process='CURVET (WO_CL W_CD)')\n",
-    "        \n",
-    "    def forth(self):\n",
-    "        print(\"Training CURVET (W/CLCD)\")\n",
-    "        Level=0\n",
-    "        CURVET (G, index, Level, Process='CURVET (W_CLCD)')\n",
-    "        \n",
-    "        \n",
-    "    def __init__(self):\n",
-    "        self.method = input(\"Which process do you want to use? \\n\\n 1) pretrained-imagenet. \\n\\n 2) CURVET (WO/CLCD). \\n\\n 3) CURVET (WO/CL, W/CD). \\n\\n 4) CURVET (W/CLCD) \\n\\n Please enter the corresponding number and hit enter >>>>> \")\n",
-    "\n",
-    "        if self.method == str(1):\n",
-    "            self.first()\n",
-    "        elif self.method == str(2):\n",
-    "            self.second()\n",
-    "        elif self.method == str(3):\n",
-    "            self.third()\n",
-    "        elif self.method == str(4):\n",
-    "            self.forth()   "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "767d898f",
    "metadata": {},
@@ -219,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "94b170a4",
    "metadata": {
     "execution": {
@@ -262,12 +224,12 @@
    "id": "ff85dde4",
    "metadata": {},
    "source": [
-    "### CURVET (W/CLCD)"
+    "#### CURVET (WO/CL, W/CD)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "749d90b1",
    "metadata": {},
    "outputs": [],
@@ -285,7 +247,7 @@
     "    model.load_weights('.../.../weights.h5', by_name=True) \n",
     "   \n",
     "    \n",
-    "     model = Model(model.input, model.layers[-2].output)\n",
+    "    model = Model(model.input, model.layers[-2].output)\n",
     "    x = layers.Flatten()(model.output)\n",
     "    \n",
     "    new_prediction =layers.Dense(len(train_generator.class_indices),\n",
@@ -299,8 +261,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "050de522",
+   "metadata": {},
+   "source": [
+    "#### CURVET (W/CLCD)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2c452007",
    "metadata": {},
    "outputs": [],
@@ -336,17 +306,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c7591568",
-   "metadata": {},
-   "source": [
-    "### Apply a pre-trained model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2ccf1a5a",
+   "execution_count": 10,
+   "id": "40fd5d6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,8 +394,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3d18d6d5",
+   "execution_count": 11,
+   "id": "f1ebba33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,8 +431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "aeaebe3f",
+   "execution_count": 12,
+   "id": "866d1cfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "f3519af4",
    "metadata": {
     "execution": {
@@ -611,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "41a7e03e",
    "metadata": {},
    "outputs": [],
@@ -670,10 +632,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "id": "b365cef4",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-30T12:23:01.382477Z",
+     "iopub.status.busy": "2023-04-30T12:23:01.381299Z",
+     "iopub.status.idle": "2023-04-30T12:23:01.393921Z",
+     "shell.execute_reply": "2023-04-30T12:23:01.392525Z",
+     "shell.execute_reply.started": "2023-04-30T12:23:01.382422Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class The_proccess():\n",
+    "  \n",
+    "    def first(self):\n",
+    "        print(\"Transfer learning with a pretrained-imagenet\")\n",
+    "        Level=-1\n",
+    "        ImageNet_model(Dataset_path, G, index, Level, Process= 'pretrained-imagenet')\n",
+    "        \n",
+    "    def second(self):\n",
+    "        print(\"Training CURVET (WO/CLCD)\")\n",
+    "        Level=0\n",
+    "        CURVET (G, index, Level, Process='CURVET (WO_CLCD)')\n",
+    "\n",
+    "    def third(self):\n",
+    "        print(\"Training CURVET (WO/CL, W/CD)\")\n",
+    "        Level=0\n",
+    "        CURVET (G, index, Level, Process='CURVET (WO_CL W_CD)')\n",
+    "        \n",
+    "    def forth(self):\n",
+    "        print(\"Training CURVET (W/CLCD)\")\n",
+    "        Level=0\n",
+    "        CURVET (G, index, Level, Process='CURVET (W_CLCD)')\n",
+    "        \n",
+    "        \n",
+    "    def __init__(self):\n",
+    "        self.method = input(\"Which process do you want to use? \\n\\n 1) pretrained-imagenet. \\n\\n 2) CURVET (WO/CLCD). \\n\\n 3) CURVET (WO/CL, W/CD). \\n\\n 4) CURVET (W/CLCD) \\n\\n Please enter the corresponding number and hit enter >>>>> \")\n",
+    "\n",
+    "        if self.method == str(1):\n",
+    "            self.first()\n",
+    "        elif self.method == str(2):\n",
+    "            self.second()\n",
+    "        elif self.method == str(3):\n",
+    "            self.third()\n",
+    "        elif self.method == str(4):\n",
+    "            self.forth()   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "4a5aaced",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Granularity Levels (G): ['g_5', 'g_4', 'g_3', 'g_2', 'g_1']\n",
+      "Corresponding Indices (index): [5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Paths to the dataset and the directory where results will be saved\n",
     "\n",
