--- a/CURVET model.ipynb
+++ b/CURVET model.ipynb
@@ -143,7 +143,7 @@
     "img_height=224\n",
     "img_width=224\n",
     "\n",
-    "testpath= ('V:/CLOG_CD/brain/test_Copy/')\n",
+    "testpath= ('V:/brain_dataset/test_set/')\n",
     "\n",
     "test_generator = test_datagen.flow_from_directory(\n",
     "        testpath,# This is the target directory\n",
@@ -699,8 +699,8 @@
    "source": [
     "# Paths to the dataset and the directory where results will be saved\n",
     "\n",
-    "Dataset_path = 'V:/CLOG_CD/brain/k_means - Copy/'  \n",
-    "save_to_dir = 'C:/Users/S20165994/Desktop/New folder/' \n",
+    "Dataset_path = 'V:/....../brain dataset/'  \n",
+    "save_to_dir = 'C:/....../granularity datasets/' \n",
     "\n",
     "# Determine the decomposition granularity by listing all the folders in the dataset path\n",
     "# Each folder represents a granularity level (e.g., g1, g2, ..., g9_max)\n",
@@ -737,7 +737,7 @@
    },
    "outputs": [],
    "source": [
-    "CLOG_CD = The_proccess()"
+    "CURVETE = The_proccess()"
    ]
   },
   {
